--- a/photographer.html
+++ b/photographer.html
@@ -9,28 +9,72 @@
   </head>
   <body>
     <header>
-      <img src="assets/images/logo.png" class="logo" />
+      <a href="/Front-End-Fisheye/"><img src="assets/images/logo.png" class="logo" /></a>
     </header>
     <main id="main">
       <div class="photograph-header">
         <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
       </div>
+      
+      <div id="select-form">
+        <div class="label">
+          <label for="select-menu">Trier par</label>
+        </div>
+        <div>
+          <div class="select-title" onclick="toggleOptions()">Popularité</div>
+          <div class="select-options">
+            <div id="select-popular" onclick="selectOption('popular')">Popularité</div>
+            <div id="select-date" onclick="selectOption('date')">Date</div>
+            <div id="select-title" onclick="selectOption('title')">Titre</div>
+          </div>
+        </div>
+        <input type="hidden" name="select" id="selected-value">      
+      </div>
+
+      <div class="photo-gallery"></div>
+
+      <div class="likes-price-container">
+            <div class="likes flex">
+              <p>297 081</p>
+              <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M9.125 18.35L7.85625 17.03C3.35 12.36 0.375 9.28 0.375 5.5C0.375 2.42 2.4925 0 5.1875 0C6.71 0 8.17125 0.81 9.125 2.09C10.0787 0.81 11.54 0 13.0625 0C15.7575 0 17.875 2.42 17.875 5.5C17.875 9.28 14.9 12.36 10.3938 17.04L9.125 18.35Z" fill="black"/>
+              </svg>
+            </div>
+          <p>300€ / jour</p>
+      </div>
     </main>
+
     <div id="contact_modal">
 			<div class="modal">
-				<header>
-          <h2>Contactez-moi</h2>
+				<header class="modal-header">
+          <div class="modal-div">
+            <h2 >Contactez-moi</h2>
+          </div>
           <img src="assets/icons/close.svg" onclick="closeModal()" />
         </header>
-				<form>
+				<form method="post" onsubmit="return logData()">
 					<div>
-						<label>Prénom</label>
-						<input />
+						<label for="firstname">Prénom</label>
+						<input name="firstname" id="firstname" required/>
+            <label for="lastname">Nom</label>
+						<input name="lastname" id="lastname" required/>
+            <label for="email">Email</label>
+						<input name="email" id="email" required/>
+            <label for="message">Votre message</label>
+						<input name="message" id="message" required/>
 					</div>
-          <button class="contact_button">Envoyer</button>
+          <button type="submit" class="contact_button">Envoyer</button>
 				</form>
 			</div>
 		</div>
+
+    <div id="lightbox">
+      <img src="assets/icons/left_arrow.svg" alt="icon" id="left-arrow"/>
+      <div id="lightbox-container"></div>
+      <img src="assets/icons/close_lightbox.svg" alt="icon" id="close-lightbox"/>
+      <img src="assets/icons/right_arrow.svg" alt="icon" id="right-arrow"/>
+    </div>
+
     <script src="scripts/pages/photographer.js"></script>
     <script src="scripts/utils/contactForm.js"></script>
   </body>
