--- a/photographer.html
+++ b/photographer.html
@@ -69,10 +69,12 @@
 		</div>
 
     <div id="lightbox">
+      <div class="lightbox-main-container">
       <img src="assets/icons/left_arrow.svg" alt="icon" id="left-arrow"/>
       <div id="lightbox-container"></div>
-      <img src="assets/icons/close_lightbox.svg" alt="icon" id="close-lightbox"/>
-      <img src="assets/icons/right_arrow.svg" alt="icon" id="right-arrow"/>
+        <img src="assets/icons/close_lightbox.svg" alt="icon" id="close-lightbox"/>
+        <img src="assets/icons/right_arrow.svg" alt="icon" id="right-arrow"/>
+      </div>
     </div>
 
     <script src="scripts/pages/photographer.js"></script>
