--- a/photographer.html
+++ b/photographer.html
@@ -84,11 +84,12 @@
         <button id="right-arrow-button">
           <img src="assets/icons/right_arrow.svg" alt="Next image" id="right-arrow"/>
         </button>
-        <button id="close-lightbox-button">
+        <button id="close-lightbox-button" aria-label="Close dialog">
         </button>
       </div>
     </div>
 
+    <script src="scripts/templates/photographerMedia.js"></script>
     <script src="scripts/pages/photographer.js"></script>
     <script src="scripts/utils/contactForm.js"></script>
   </body>
