fix select accessibility

--- a/photographer.html
+++ b/photographer.html
@@ -28,12 +28,12 @@
             <img src="assets/icons/arrow_down.svg" alt="icon" id="arrow-down"/>
           </div>
           <div class="select-options" role="listbox" aria-labelledby="select-menu">
-            <div role="listbox" aria-activedescendant aria-selected id="select-popular" onclick="selectOption('popular')" tabindex="0">
+            <div role="listbox" aria-label="popularity" aria-activedescendant aria-selected id="select-popular" onclick="selectOption('popular')" tabindex="0">
               Popularité
               <img src="assets/icons/arrow_up.svg" alt="icon" id="arrow-up"/>
               </div>
-              <div role="listbox" aria-activedescendant aria-selected id="select-date" onclick="selectOption('date')" tabindex="0">Date</div>
-              <div role="listbox" aria-activedescendant aria-selected id="select-title" onclick="selectOption('title')" tabindex="0">Titre</div>
+              <div role="listbox" aria-label="date" aria-activedescendant aria-selected id="select-date" onclick="selectOption('date')" tabindex="0">Date</div>
+              <div role="listbox" aria-label="title" aria-activedescendant aria-selected id="select-title" onclick="selectOption('title')" tabindex="0">Titre</div>
           </div>
       </div>
       <input type="hidden" name="select" id="selected-value">
