--- a/photographer.html
+++ b/photographer.html
@@ -59,7 +59,7 @@
             <h2 >Contactez-moi</h2>
           </div>
           <button aria-label="Close contact form" id="close-modal-button">
-            <img src="assets/icons/close.svg" alt="Close dialog" onclick="closeModal()"/>
+            <img src="assets/icons/close.svg" alt="Close contact form" onclick="closeModal()"/>
           </button>
         </header>
 				<form id="contact-form" method="post">
